feat: manage session records from cabinet
